# visual-simulation-of-smoke

./: CMakeLists.txt  README.md  backend-cpu.cpp  backend-cuda.cu  backend-parallel.cpp  benchmark.cu  demo_ops.cu  main.cpp  main.cu  solver.cu  validate.cpp  visual-simulation-of-smoke-3d.h  visual-simulation-of-smoke.h
.github/workflows/: arch-build.yml
vulkan-app/: app.cpp  scene_plume.cpp  scene_plume.ixx
vulkan-app/shaders/: field_volume.slang
